# mushmallow

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mushmallow/: __init__.py  __main__.py  core.py  formatting.py  repr_ast.py  text.py
tests/: test_core.py  test_formatting.py  test_repr_ast.py  test_text.py
