[project]
name = "mushmallow"
version = "0.0.1"
authors = [
    {name = "Lewis Haley", email = "you@yourdomain.com"},
]
description = "Formatting tool for Marshmallow"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

dependencies = [
    "black",
    "marshmallow",
]

[project.optional-dependencies]
test = [
    "pylint",
    "isort",
    "pytest",
    "pytest-cov",
]

[tool.pylint.master]
persistent = "no"
load-plugins = [
    "pylint.extensions.docparams",
    "pylint.extensions.docstyle",
]
accept-no-param-doc = "no"
accept-no-raise-doc = "no"
accept-no-return-doc = "no"
accept-no-yields-doc = "no"

[tool.pylint.reports]
reports = "no"
score = "no"

[tool.pylint.messages_control]
disable = [
    "logging-format-interpolation",
    "logging-fstring-interpolation",
    "fixme",
]
fail-on = [
    "bad-inline-option",
    "useless-suppression",
    "use-symbolic-message-instead",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
atomic = true
combine_as_imports = true
force_sort_within_sections = true
order_by_type = true
src_paths = [
    "src",
    "tests",
]

[tool.pytest.ini_options]
addopts = """
    --doctest-modules \
    --verbose \
"""
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
]
